instrumented lucene